--- a/app/src/main/res/layout/activity_character_screen.xml
+++ b/app/src/main/res/layout/activity_character_screen.xml
@@ -8,33 +8,33 @@
     tools:context=".CharacterScreen">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/characterImg"
         android:layout_width="211dp"
         android:layout_height="208dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="12dp"
         app:layout_constraintBottom_toTopOf="@+id/xpBar"
-        app:layout_constraintEnd_toStartOf="@+id/imageView4"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintEnd_toStartOf="@+id/itemRU"
+        app:layout_constraintStart_toEndOf="@+id/itemLU"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/itemLU"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="6dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView3"
-        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintBottom_toTopOf="@+id/itemLL"
+        app:layout_constraintEnd_toStartOf="@+id/characterImg"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="?android:attr/galleryItemBackground" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/itemLL"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -42,27 +42,27 @@
         android:layout_marginEnd="6dp"
         android:layout_marginBottom="102dp"
         app:layout_constraintBottom_toTopOf="@+id/choresList"
-        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintEnd_toStartOf="@+id/characterImg"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/itemLU"
         app:srcCompat="?android:attr/galleryItemBackground" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/itemRU"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView5"
+        app:layout_constraintBottom_toTopOf="@+id/itemRL"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/characterImg"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="?android:attr/galleryItemBackground" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/itemRL"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -71,8 +71,8 @@
         android:layout_marginBottom="102dp"
         app:layout_constraintBottom_toTopOf="@+id/choresList"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        app:layout_constraintStart_toEndOf="@+id/characterImg"
+        app:layout_constraintTop_toBottomOf="@+id/itemRU"
         app:srcCompat="?android:attr/galleryItemBackground" />
 
     <ProgressBar
@@ -80,81 +80,24 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="203dp"
         android:layout_height="42dp"
-        android:layout_marginStart="9dp"
-        android:layout_marginEnd="105dp"
-        app:layout_constraintBottom_toTopOf="@+id/hpBar"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="42dp"
+        app:layout_constraintBottom_toTopOf="@+id/choresList"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView6" />
-
-    <ProgressBar
-        android:id="@+id/hpBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="203dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="9dp"
-        android:layout_marginEnd="105dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView7"
-        app:layout_constraintTop_toBottomOf="@+id/xpBar" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/characterImg" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/xpText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="XP"
+        app:layout_constraintBottom_toBottomOf="@+id/xpBar"
         app:layout_constraintEnd_toEndOf="@+id/xpBar"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="@+id/xpBar"
-        app:layout_constraintTop_toTopOf="@+id/xpBar" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HP"
-        app:layout_constraintEnd_toEndOf="@+id/hpBar"
-        app:layout_constraintStart_toStartOf="@+id/hpBar"
-        app:layout_constraintTop_toTopOf="@+id/hpBar" />
-
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="37dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginBottom="57dp"
-        app:layout_constraintBottom_toTopOf="@+id/choresList"
-        app:layout_constraintEnd_toStartOf="@+id/xpBar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/gallery_thumb" />
-
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="37dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginBottom="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/choresList"
-        app:layout_constraintEnd_toStartOf="@+id/hpBar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@android:drawable/gallery_thumb" />
-
-    <Button
-        android:id="@+id/addChoreButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="122dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
-        android:text="Add Chore"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/shopButton"
-        app:layout_constraintTop_toBottomOf="@+id/choresList" />
+        app:layout_constraintTop_toTopOf="@+id/xpBar"
+        app:layout_constraintVertical_bias="0.037" />
 
     <ListView
         android:id="@+id/choresList"
@@ -173,13 +116,52 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="22dp"
         android:layout_marginBottom="32dp"
         android:onClick="launchShop"
         android:text="Shop"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/addChoreButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/choresList" />
+
+    <TextView
+        android:id="@+id/lvlText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Lvl. 1"
+        app:layout_constraintBottom_toTopOf="@+id/characterImg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addChore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.842"
+        app:layout_constraintStart_toEndOf="@+id/shopButton"
+        app:layout_constraintTop_toBottomOf="@+id/choresList"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@android:drawable/ic_menu_add" />
+
+    <ImageButton
+        android:id="@+id/addXP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="42dp"
+        app:layout_constraintBottom_toTopOf="@+id/choresList"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/xpBar"
+        app:layout_constraintTop_toBottomOf="@+id/itemRL"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@android:drawable/ic_input_add" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
