--- a/app/src/main/res/layout/activity_character_screen.xml
+++ b/app/src/main/res/layout/activity_character_screen.xml
@@ -35,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:max="100" />
+
     <!-- Item Slots (Simple image views) -->
     <LinearLayout
         android:layout_width="match_parent"
@@ -71,6 +72,7 @@
             android:layout_margin="4dp"
             android:background="#CCC" />
     </LinearLayout>
+
     <!-- Scrollable Chores Section -->
     <TextView
         android:layout_width="wrap_content"
@@ -91,11 +93,29 @@
             android:orientation="vertical" />
     </ScrollView>
 
-    <!-- Add Chore Button -->
-    <Button
-        android:id="@+id/buttonAddChore"
+    <!-- Button Row -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Add New Chore" />
+        android:orientation="horizontal"
+        android:weightSum="2">
+
+        <Button
+            android:id="@+id/buttonAddChore"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginEnd="4dp"
+            android:text="Add New Chore" />
+
+        <Button
+            android:id="@+id/buttonShop"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginStart="4dp"
+            android:text="Shop" />
+    </LinearLayout>
+
 </LinearLayout>
