--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -17,7 +17,7 @@
             android:id="@+id/coinIcon"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@android:drawable/ic_menu_help" />
+            android:src="@drawable/ic_coin" />
 
         <TextView
             android:id="@+id/coinTextView"
